# ahmad

./: .gitignore
bass/: Cargo.toml
bass/src/: model.rs
model/: Cargo.toml
model/src/: model.rs
plugin/: Cargo.toml
plugin/src/: main.rs
plugin/src/agent/: agent.rs  model.rs
treble/: Cargo.toml  ISSUES.md  README.md
treble/src/: agent.rs  editor.rs  iced_ui.rs  lib.rs  libplugui.rs  main.rs  test.rs  ui.rs
treble/src/agent/: model.rs
treble/src/editor/: agent.rs  ui.rs
treble/src/iced_baseview_impl/: editor.rs  lib.rs  test.rs
treble/src/libplugui/: editor.rs  ui.rs  wrapper.rs
treble/src/test/: editor.rs  lib1.rs  wrapper.rs
treble/src/ui/: agent.rs
