[package]
name = "model"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-stream-lite = "0.2.0"
axum = "0.8.4"
futures = "0.3.31"
ort = "=2.0.0-rc.10"
rand = "0.9.1"
serde = "1.0.219"
tokenizers = "0.21.1"
tokio = "1.45.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", default-features = false, features = [ "env-filter", "fmt" ] }
