[package]
name = "plugin"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.31"
iced = "0.13.1"
iced_futures = "0.13.2"
magic = "0.16.2"
anyhow = "1.0.98"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.19"
dotenv = "0.15.0"
tokio = { version = "1.46.1", default-features = true, features = ["io-util"] }
reqwest = { version = "0.12.22", default-features = true, features = ["json", "stream", "blocking"] }
url = "2.5.4"
serde = { version = "1.0.219", default-features = true, features = ["derive"] }
rfd = "0.15.4"
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", branch = "master" }
baseview = { git = "https://github.com/RustAudio/baseview.git", rev = "9a0b42c09d712777b2edb4c5e0cb6baf21e988f0", features = ["opengl"]}
wgpu = "25"
raw-window-handle = "0.5"
raw-window-handle-06 = { package = "raw-window-handle", version = "0.6.2" }
pollster = "0.4.0"
iced_wgpu = "0.13.5"
iced_runtime = "0.13.2"
crossbeam = "0.8.4"


